--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"cd ..\\server && npm run dev\" \"npm start\""
   },
   "browserslist": {
     "production": [
@@ -26,7 +27,8 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^7.5.0",
     "eslint-config-wesbos": "^3.1.4"
   },
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:3001"
 }
