--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
